Rewrite maven-plugin README with two usage scenarios