@@ -12,7 +12,17 @@ For the runtime javaagent alternative, see the
 [auto-valhalla-agent project](../auto-valhalla-agent). For an
 overview of the whole project, see the [auto-valhalla README](../README.md).
 
-## Quickstart
+## Usage
+
+There are two common setups.
+
+### 1. Develop on an older JDK, deploy value classes on Valhalla JVMs
+
+You work on JDK 8, 17, 21, or 25 and want your code to take advantage of
+value classes when run on a Valhalla-enabled JVM.
+
+Set `$JAVA_HOME` to your older JDK and `$JAVA28_HOME` to a JDK 28
+installation, then add the plugin to your `pom.xml`:
 
 ```xml
 <plugin>
@@ -30,20 +40,67 @@ overview of the whole project, see the [auto-valhalla README](../README.md).
 </plugin>
 ```
 
-Select classes in source with the
-[`@AutoValhalla` annotation](../auto-valhalla-api#quickstart); the plugin converts
-exactly the annotated top-level classes and nothing else.
+Annotate the classes you want as value classes with
+[`@AutoValhalla`](../auto-valhalla-api#quickstart). The plugin compiles them
+as value classes and packages them into a multi-release jar under
+`META-INF/versions/28`.
 
-The plugin is also available directly from the command line:
-
-```bash
-mvn auto-valhalla:generate-sources auto-valhalla:compile-generated-sources
-```
-
-At runtime, run on JDK 28 with `--enable-preview`:
+When run on an older JDK, all classes behave exactly as before. On a
+Valhalla-enabled JVM (JDK 28+), the `@AutoValhalla` classes are loaded as
+value classes:
 
 ```bash
 java --enable-preview -jar myapp.jar
+```
+
+### 2. Develop on JDK 28, target an older JDK for compatibility
+
+You use JDK 28 as your day-to-day `$JAVA_HOME` but want to compile for an
+older JDK for widest possible compatibility.
+
+Configure `maven-compiler-plugin` to target the older JDK (if not already):
+
+```xml
+<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-compiler-plugin</artifactId>
+  <configuration>
+    <release>17</release>
+  </configuration>
+</plugin>
+```
+
+Then add the plugin:
+
+```xml
+<plugin>
+  <groupId>io.github.thunkware</groupId>
+  <artifactId>auto-valhalla-maven-plugin</artifactId>
+  <version>0.1.1-SNAPSHOT</version>
+  <executions>
+    <execution>
+      <goals>
+        <goal>generate-sources</goal>
+        <goal>compile-generated-sources</goal>
+      </goals>
+    </execution>
+  </executions>
+</plugin>
+```
+
+No `$JAVA28_HOME` or other JDK environment variables are needed — the
+plugin uses the JDK running Maven directly.
+
+The outcome is the same: `@AutoValhalla` classes are compiled as value
+classes and built into a multi-release jar. Older JDKs load the identity
+class variants; Valhalla JVMs load the value class variants.
+
+### Command line
+
+The plugin goals can also be invoked directly:
+
+```bash
+mvn auto-valhalla:generate-sources auto-valhalla:compile-generated-sources
 ```
 
 ## Goals
@@ -56,8 +113,7 @@ java --enable-preview -jar myapp.jar
 ## How it works
 
 There is no bytecode rewriting anywhere: the `auto-valhalla-processor`
-annotation processor (a dependency of this plugin, passed to `javac -
-processorpath`) selects the top-level types that carry the `@AutoValhalla`
+annotation processor selects the top-level types that carry the `@AutoValhalla`
 annotation, and writes generated copies of their source files into a generated
 directory with the `class`/`record` declarations turned into
 `value class`/`value record`. The `compile-generated-sources` goal then delegates to
@@ -73,14 +129,10 @@ than 28) — the value-class compilation itself is preview.
 
 ## Requirements
 
-Run Maven on **JDK 8 through 28**:
-
-- **JDK 28** — runs the value-class compilation directly.
-- **JDK 8–27** — requires the `JAVA28_HOME` environment variable pointing to
-  a JDK 28 installation; the plugin uses that JDK's `javac` for the
-  value-class compilation.
-
-The build fails if Maven runs below JDK 8 or above 28 without `JAVA28_HOME`.
+- **JDK 28** — the plugin uses the JDK running Maven for the value-class
+  compilation. No extra environment variables needed.
+- **JDK 8–27** — set `JAVA28_HOME` to a JDK 28 installation. The plugin
+  uses that JDK's `javac` for the value-class compilation.
 
 The `maven-jar-plugin` (≥ 3.4.0) handles the `Multi-Release: true` manifest
 entry automatically when it detects `META-INF/versions` content. Older versions
@@ -94,23 +146,14 @@ All parameters are optional:
 | --- | --- | --- | --- |
 | `skipGenerateSources` | `auto-valhalla.skipGenerateSources` | `false` | skip the annotation-processor pass |
 | `skipCompileGeneratedSources` | `auto-valhalla.skipCompileGeneratedSources` | `false` | skip the value-class compilation |
-| `parameters` | — | inherited | generate metadata for reflection on method parameters (`-parameters`) |
-| `debug` | — | inherited | include debugging information (`-g` or `-g:none`) |
-| `debuglevel` | — | inherited | keyword list for `-g:` (e.g. `lines,vars,source`) |
-| `showWarnings` | — | inherited | show compiler warnings (passes `-nowarn` when `false`) |
-| `showDeprecation` | — | inherited | show deprecation warnings (`-deprecation`) |
-| `compilerArgs` | — | inherited | list of additional arguments to pass to javac (e.g. `<compilerArgs><arg>-parameters</arg></compilerArgs>`) |
-| `compilerArgument` | — | inherited | single additional argument string to pass to javac |
-| `compiler` | — | — | nested configuration block (`<compiler>`) containing compiler-plugin options such as `executable` and `encoding`; options are also inherited from the project's `maven-compiler-plugin` declaration |
+| `compiler` | — | — | nested configuration block (`<compiler>`) containing compiler-plugin options such as `executable` and `encoding` |
 
-Compiler configuration options (`parameters`, `debug`, `debuglevel`,
-`showWarnings`, `showDeprecation`, `encoding`, `compilerArgs`) can be specified
-directly on `<configuration>`, nested inside a `<compiler>` block, or
-automatically inherited from the project's `maven-compiler-plugin`
-configuration:
+Compiler configuration options can be specified nested inside a `<compiler>` block, or
+automatically inherited from the project's `maven-compiler-plugin` configuration:
 
 ```xml
 <configuration>
+  <!-- nested compiler configuration. parameters can any parameter accepted by maven-compiler-plugin -->
   <compiler>
     <debug>true</debug>
     <parameters>true</parameters>
@@ -122,22 +165,18 @@ configuration:
 </configuration>
 ```
 
-Selection is by the `@AutoValhalla` annotation alone: an annotated class that
-javac rejects (because it cannot be a value class) fails the build.
-
 ## Example
 
-The `test/test-maven-plugin-jdk25` project binds both goals and builds a
+The `test/test-maven-plugin-jdk8` project binds both goals and builds a
 runnable multi-release jar. The `PluginOutputTest` inspects the produced class
-files with `javap` (base classes class-file 69, versioned variants class-file
-72 / value classes) and `build.sh` runs the jar on JDK 28 to prove the value
+files with `javap` and `build.sh` runs the jar on JDK 28 to prove the value
 classes are active at runtime.
 
 Additional test modules verify other configurations:
 
-| Module | What it tests |
-| --- | --- |
-| `test-maven-plugin-jdk8` | Base classes at release 8 (class-file 52) |
-| `test-maven-plugin-no-compiler` | No explicit `maven-compiler-plugin` declaration |
+| Module                              | What it tests                                     |
+|-------------------------------------|---------------------------------------------------|
+| `test-maven-plugin-jdk25`           | Base classes at release 25                        |
+| `test-maven-plugin-no-compiler`     | No explicit `maven-compiler-plugin` declaration   |
 | `test-maven-plugin-nested-compiler` | Nested `<compiler>` block with different settings |
-| `test-maven-plugin-parent-config` | Compiler settings inherited from a parent POM |
+| `test-maven-plugin-parent-config`   | Compiler settings inherited from a parent POM     |
